# primalbedtools

./: 404.html  index.html  objects.inv  pyproject.toml
.github/workflows/: pytest.yml
api/: index.html
cli/: index.html
docs/: how-to-guides.md
how-to-guides/: index.html
primalbedtools/: amplicons.py  bedfiles.py  fasta.py  main.py  primerpairs.py  scheme.py  utils.py  validate.py
tests/: test_amplicons.py  test_bedfile.py  test_primerpair.py  test_remap.py  test_scheme.py  test_utils.py  test_validate.py
