[tool.poetry]
name = "primalbedtools"
version = "0.8.1"
description = "A collection of tools for working with primer.bed files"
authors = ["ChrisKent <chrisgkent@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ChrisgKent/primalbedtools"
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pre-commit = "^3.7.1"
coverage = "^7.8.0"
pytest = "^8.3.5"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-material = "^9.6.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
primalbedtools = "primalbedtools.main:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = ["E501"]